--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anugrah | Developer Premium</title>
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="/img/logo.jpg">
+    <link rel="icon" type="image/jpeg" sizes="192x192" href="img/logo.jpg">
+    <link rel="apple-touch-icon" href="img/logo.jpg">
+    <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -61,6 +65,9 @@
                     <div data-i18n="stat1"><strong>4+</strong> Tahun Pengalaman</div>
                     <div data-i18n="stat2"><strong>50+</strong> Proyek Selesai</div>
                     <div data-i18n="stat3"><strong>100%</strong> Klien Puas</div>
+                </div>
+                <div class="about-actions">
+                    <a href="about.html" class="btn-primary" data-i18n="aboutMoreBtn">Lihat lebih lengkap</a>
                 </div>
             </div>
             <div class="about-image" data-aos="fade-left">
@@ -353,6 +360,7 @@
             stat1: '<strong>4+</strong> Tahun Pengalaman',
             stat2: '<strong>50+</strong> Proyek Selesai',
             stat3: '<strong>100%</strong> Klien Puas',
+            aboutMoreBtn: 'Lihat lebih lengkap',
             expertiseTitle: 'Keahlian <span>Saya</span>',
             exp1Desc: 'Saya membangun website yang bukan hanya tampil bagus, tapi meningkatkan persepsi premium dan eksklusivitas brand Anda.',
             exp2Desc: 'Struktur website dioptimalkan untuk kecepatan, SEO, dan pengalaman pengguna yang mulus di semua perangkat.',
@@ -418,6 +426,7 @@
             stat1: '<strong>4+</strong> Years Experience',
             stat2: '<strong>50+</strong> Projects Completed',
             stat3: '<strong>100%</strong> Satisfied Clients',
+            aboutMoreBtn: 'See full profile',
             expertiseTitle: 'My <span>Expertise</span>',
             exp1Desc: 'I build websites that not only look good but elevate the premium perception and exclusivity of your brand.',
             exp2Desc: 'Website structure optimized for speed, SEO, and a seamless user experience across all devices.',
