--- a/project.html
+++ b/project.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semua Project | Anugrah</title>
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="/img/logo.jpg">
+    <link rel="icon" type="image/jpeg" sizes="192x192" href="img/logo.jpg">
+    <link rel="apple-touch-icon" href="img/logo.jpg">
+    <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
